# kurt-meeting-bot

./: .dockerignore  .env.example  .gitignore  COURSE_OUTLINE.md  LAUNCH_CHECKLIST.md  Procfile  README.md  bot.py  create_meeting.py  nixpacks.toml  pyproject.toml  railway.toml  recall_api.py  scheduler.py  test_linkedin_response.py  test_social_url_extraction.py
